textarea overflow fix

--- a/sass/components/form-element.scss
+++ b/sass/components/form-element.scss
@@ -12,7 +12,7 @@
   align-items: flex-end;
 
   .form-textarea-wrapper {
-    flex: 1 0 auto;
+    flex: 1 1 auto;
   }
 }
 
